--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
-body {
+.body {
     padding: 1.74rem 1rem;
     background-color: var(--almost-white);
-
 }
 
 :root {
@@ -21,5 +22,49 @@ body {
 }
 
 .header-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
 
+.header-mobile button {
+    border: none;
+    background: none;
+}
+
+.primeira-secao {
+    margin-bottom: 4rem;
+}
+
+.primeira-secao img {
+    width: 100%;
+    margin-bottom: 1.5rem;
+
+}
+
+.primeira-secao h1 {
+    font-size: 2.5rem;
+    line-height: 100%;
+    color: var(--Dark-Space-Blue);
+    margin-bottom: 1rem;
+}
+
+.primeira-secao p {
+    font-size: 0.9375rem;
+    line-height: 1.626rem;
+    color: var(--Gunmetal);
+    margin-bottom: 1.5rem;
+}
+
+.primeira-secao button {
+    padding: 0.75rem 2rem;
+    background: var(--Light-Vermillion);
+    border: none;
+    text-transform: uppercase;
+    color: var(--almost-white);
+    font-weight: 700;
+    font-size: 0.875rem;
+    letter-spacing: 0.25rem;
+    line-height: 1.5rem;
 }
