--- a/style.css
+++ b/style.css
@@ -104,3 +104,34 @@
 }
 
 
+.terceira-secao > div {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+
+}
+
+.terceira-secao img {
+    max-width: 6.25rem;
+}
+
+.terceira-secao strong {
+    color: var(--Silver);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.terceira-secao h2 {
+    color: var(--Dark-Space-Blue);
+    font-size: 1.25rem;
+    font-weight: 800;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+}
+
+.terceira-secao p {
+    font-size: 0.9374rem;
+    line-height: 1.625;
+    color: var(--Gunmetal);
+}
