--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     -webkit-font-smoothing: antialiased;
 }
 
-.body {
-    padding: 1.74rem 1rem;
+body {
+    padding: 1.75rem 1rem;
     background-color: var(--almost-white);
 }
 
