--- a/style.css
+++ b/style.css
@@ -33,20 +33,23 @@ body.escurecer::before {
     
 }
 
-.header-mobile {
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
-.header-mobile button {
+header button {
     border: none;
     background: none;
     width: fit-content;
 }
 
-.header-mobile nav {
+header nav.mobile {
     position: fixed;
     background-color: var(--almost-white);
     right: -16rem;
@@ -65,22 +68,27 @@ body.escurecer::before {
 }
 
 
-.header-mobile nav.abrir {
+header nav.mobile.abrir {
     right: 0;
 
 }
 
-.header-mobile nav button {
+header nav button {
     align-self: flex-end;
     margin-bottom: 4rem;
 }
 
-.header-mobile nav a {
+header .mobile a {
     text-decoration: none;
     color: var(--Dark-Space-Blue);
     font-size: 1.125rem;
     line-height: 1.5rem;
 
+}
+
+main {
+    max-width: 1110px;
+    margin-inline: auto;
 }
 
 .primeira-secao {
@@ -185,3 +193,32 @@ body.escurecer::before {
     line-height: 1.625;
     color: var(--Gunmetal);
 }
+
+@media(min-width: 1110px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 1.75rem;
+    }
+
+    .primeira-secao{
+        grid-column: 1 / 3;
+    }
+
+    header > button {
+        display: none;
+    }
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: var(--Gunmetal);
+    }
+}
+    
