Adição dos efeitos de hover, estilização da terceira seção e térmido do projeto.

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header button {
     border: none;
     background: none;
     width: fit-content;
+    cursor: pointer;
 }
 
 header nav.mobile {
@@ -84,6 +85,10 @@ header .mobile a {
     font-size: 1.125rem;
     line-height: 1.5rem;
 
+}
+
+header .desktop {
+    display: none;
 }
 
 main {
@@ -188,6 +193,10 @@ main {
     margin-block: 0.6rem;
 }
 
+.terceira-secao a {
+    text-decoration: none;
+}
+
 .terceira-secao p {
     font-size: 0.9374rem;
     line-height: 1.625;
@@ -195,6 +204,27 @@ main {
 }
 
 @media(min-width: 1110px) {
+    
+    header > button {
+        display: none;
+    }
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+    }
+
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: var(--Gunmetal);
+    }
+
+    header .desktop a:hover {
+        color: var(--Light-Vermillion);
+    }
+
     main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -220,24 +250,22 @@ main {
         font-size: 3.5rem[];
     }
 
+    .primeira-secao button:hover {
+        background-color: var(--Dark-Space-Blue);
+        cursor: pointer;
+    }
+
     .segunda-secao h2 {
         font-size: 2.5rem;
     }
 
-    header > button {
-        display: none;
-    }
-
-    header .desktop {
+    .terceira-secao {
         display: flex;
-        gap: 2.5rem;
+        grid-column: 1 / 4;
     }
 
-    header .desktop a {
-        font-size: 0.9375rem;
-        line-height: 1.625rem;
-        text-decoration: none;
-        color: var(--Gunmetal);
+    .terceira-secao h2:hover {
+        color: var(--Light-Vermillion);
     }
 }
     
